grammar.js
    program: ($) => seq(optional($.hash_bang_line), repeat($._statement)),

    _statement: ($) => prec.right(seq($.statement, optional($._statement_boundary))),

    export_statement: ($) =>
      choice(
        seq(
          'export',
          choice(
            seq(
              choice('*', $.namespace_export, $.export_clause),
              $._from_clause,
              optional(choice($.import_attribute, $._line_break_before_attributes))
            ),
            alias($._local_export_clause, $.export_clause)
          ),
          $._semicolon
        ),
        seq(
          repeat(field('decorator', $.decorator)),
          'export',
          choice(
            field('declaration', $.declaration),
            seq('default', choice(field('declaration', $.declaration), seq(field('value', $.expression), $._semicolon)))
          )
        )
      ),

    _local_export_clause: ($) =>
      seq('{', commaSep(alias($._local_export_specifier, $.export_specifier)), optional(','), '}'),

    import: () => token('import'),

    import_statement: ($) =>
      seq(
        'import',
        choice(seq($.import_clause, $._from_clause), field('source', $.string)),
        optional(choice($.import_attribute, $._line_break_before_attributes)),
        $._semicolon
      ),

    import_clause: ($) =>
      choice(
        $.namespace_import,
        $.named_imports,
        seq($.identifier, optional(seq(',', choice($.namespace_import, $.named_imports))))
      ),

    _from_clause: ($) => seq('from', field('source', $.string)),

    expression_statement: ($) => seq($._expressions, $._semicolon),

    variable_declaration: ($) => seq('var', commaSep1($.variable_declarator), $._semicolon),

    _let: () => token(prec(-1, /let/)),

    lexical_declaration: ($) =>
      seq(field('kind', choice('let', alias($._let, 'let'), 'const')), commaSep1($.variable_declarator), $._semicolon),

    using_declaration: ($) =>
      seq(
        field('kind', choice('using', seq(alias($._await_keyword, 'await'), 'using'))),
        commaSep1(alias($._using_declarator, $.variable_declarator)),
        $._semicolon
      ),

    _using_declarator: ($) =>
      seq(field('name', choice($.identifier, alias('of', $.identifier))), optional($._initializer)),

    variable_declarator: ($) =>
      seq(
        field('name', choice($.identifier, alias('of', $.identifier), $._destructuring_pattern)),
        optional(choice($._initializer, $._line_break_after_binding))
      ),

    statement_block: ($) => prec.right(seq('{', repeat($._statement), '}')),

    if_statement: ($) =>
      prec.right(
        seq(
          'if',
          field('condition', $.parenthesized_expression),
          field('consequence', $._statement),
          optional(field('alternative', $.else_clause))
        )
      ),

    while_statement: ($) => seq('while', field('condition', $.parenthesized_expression), field('body', $._statement)),

    break_statement: ($) =>
      seq(
        'break',
        field('label', optional(alias($.identifier, $.statement_identifier))),
        choice($._semicolon, $._line_break_ends_statement)
      ),

    return_statement: ($) =>
      seq('return', choice(seq(optional($._expressions), $._semicolon), $._line_break_ends_statement)),

    labeled_statement: ($) =>
      seq(
        field('label', alias(choice($.identifier, $._reserved_identifier), $.statement_identifier)),
        ':',
        field('body', $._statement)
      ),

    //
    // Statement components
    //

    parenthesized_expression: ($) => seq('(', $._expressions, ')'),

    //
    // Expressions
    //
    _expressions: ($) => choice($.expression, $.sequence_expression),

    yield_expression: ($) =>
      prec.right(seq('yield', choice(seq('*', $.expression), optional($.expression), $._line_break_ends_statement))),

    object: ($) =>
      prec(
        'object',
        seq(
          '{',
          commaSep(
            optional(
              choice(
                $.pair,
                $.spread_element,
                $.method_definition,
                alias(choice($.identifier, $._reserved_identifier), $.shorthand_property_identifier)
              )
            )
          ),
          '}'
        )
      ),

    object_pattern: ($) =>
      prec(
        'object',
        seq(
          '{',
          commaSep(
            optional(
              choice(
                $.pair_pattern,
                $.rest_pattern,
                $.object_assignment_pattern,
                alias(choice($.identifier, $._reserved_identifier), $.shorthand_property_identifier_pattern)
              )
            )
          ),
          '}'
        )
      ),

    assignment_pattern: ($) => seq(field('left', $.pattern), '=', field('right', $.expression)),

    array: ($) => seq('[', commaSep(optional(choice($.expression, $.spread_element))), ']'),

    array_pattern: ($) => seq('[', commaSep(optional(choice($.pattern, $.assignment_pattern))), ']'),

    jsx_element: ($) =>
      seq(field('open_tag', $.jsx_opening_element), repeat($._jsx_child), field('close_tag', $.jsx_closing_element)),

    // An entity can be named, numeric (decimal), or numeric (hexadecimal). The
    // longest entity name is 29 characters long, and the HTML spec says that
    // no more will ever be added.
    jsx_expression: ($) => seq('{', optional(choice($.expression, $.sequence_expression, $.spread_element)), '}'),

    _jsx_child: ($) => choice($.jsx_text, $.html_character_reference, $._jsx_element, $.jsx_expression),

    jsx_opening_element: ($) =>
      prec.dynamic(
        -1,
        seq('<', optional(seq(field('name', $._jsx_element_name), repeat(field('attribute', $._jsx_attribute)))), '>')
      ),

    _jsx_identifier: ($) => choice(alias($.jsx_identifier, $.identifier), reserved('properties', $.identifier)),

    jsx_namespace_name: ($) => seq($._jsx_identifier, ':', $._jsx_identifier),

    _jsx_element_name: ($) =>
      choice($._jsx_identifier, alias($.nested_identifier, $.member_expression), $.jsx_namespace_name),

    jsx_closing_element: ($) => seq('</', optional(field('name', $._jsx_element_name)), '>'),

    jsx_self_closing_element: ($) =>
      seq('<', field('name', $._jsx_element_name), repeat(field('attribute', $._jsx_attribute)), '/>'),

    _jsx_attribute: ($) => choice($.jsx_attribute, $.jsx_expression),

    _jsx_attribute_name: ($) => choice(alias($._jsx_identifier, $.property_identifier), $.jsx_namespace_name),

    jsx_attribute: ($) => seq($._jsx_attribute_name, optional(seq('=', $._jsx_attribute_value))),

    _jsx_attribute_value: ($) => choice(alias($._jsx_string, $.string), $.jsx_expression, $._jsx_element),

    class: ($) =>
      prec(
        'literal',
        seq(
          repeat(field('decorator', $.decorator)),
          'class',
          field('name', optional($.identifier)),
          optional($.class_heritage),
          field('body', $.class_body)
        )
      ),

    class_declaration: ($) =>
      prec(
        'declaration',
        seq(
          repeat(field('decorator', $.decorator)),
          'class',
          field('name', $.identifier),
          optional($.class_heritage),
          field('body', $.class_body)
        )
      ),

    class_heritage: ($) => seq('extends', $.expression),

    function_expression: ($) =>
      prec(
        'literal',
        seq(
          optional('async'),
          'function',
          field('name', optional($.identifier)),
          $._call_signature,
          field('body', $.statement_block)
        )
      ),

    function_declaration: ($) =>
      prec.right(
        'declaration',
        seq(
          optional('async'),
          'function',
          field('name', $.identifier),
          $._call_signature,
          field('body', $.statement_block)
        )
      ),

    generator_function: ($) =>
      prec(
        'literal',
        seq(
          optional('async'),
          'function',
          '*',
          field('name', optional($.identifier)),
          $._call_signature,
          field('body', $.statement_block)
        )
      ),

    generator_function_declaration: ($) =>
      prec.right(
        'declaration',
        seq(
          optional('async'),
          'function',
          '*',
          field('name', $.identifier),
          $._call_signature,
          field('body', $.statement_block)
        )
      ),

    arrow_function: ($) =>
      prec.right(
        seq(
          optional('async'),
          choice(
            field('parameter', choice(alias($._reserved_identifier, $.identifier), $.identifier)),
            $._call_signature
          ),
          '=>',
          choice(
            field('body', $.expression),
            seq(
              field('body', $.statement_block),
              optional(seq($._arrow_function_block_end, optional($._arrow_function_block_continuation)))
            )
          ),
          optional($._completed_arrow_function)
        )
      ),

    // Override
    _call_signature: ($) => field('parameters', $.formal_parameters),
    _formal_parameter: ($) => choice($.pattern, $.assignment_pattern),

    optional_chain: () => '?.',

    call_expression: ($) =>
      choice(
        prec('call', seq(field('function', choice($.expression, $.import)), field('arguments', $.arguments))),
        prec('template_call', seq(field('function', $.primary_expression), field('arguments', $.template_string))),
        prec(
          'member',
          seq(
            field('function', $.primary_expression),
            field('optional_chain', $.optional_chain),
            field('arguments', $.arguments)
          )
        )
      ),

    // As in ECMAScript, a member access or index extends the nearest `new` with arguments, while an argument list fills
    // the nearest `new` that still lacks one: `new new A().b` constructs `new A().b`, `new new A().b(2)` constructs
    // `new A().b` with `2`, and `new new A()(2)` constructs `new A()`. The 'member' and 'new' precedences make the parser
    // shift a `.`, `[`, or argument list after a constructor rather than end a `new` without arguments, so that form
    // never takes one. Both forms are primary expressions, so a nested `new` matches the constructor field's type.
    new_expression: ($) =>
      prec('new', seq('new', field('constructor', $.primary_expression), field('arguments', $.arguments))),

    await_expression: ($) =>
      prec.dynamic(
        3,
        prec.right(
          'unary_void',
          seq(
            alias($._await_keyword, 'await'),
            optional($._await_identifier_line_break),
            optional(seq($._await_yield_identifier_start, optional($._await_yield_identifier_context))),
            optional($._line_break_after_await),
            $.expression,
            $._await_operand_end
          )
        )
      ),

    member_expression: ($) =>
      prec(
        'member',
        seq(
          field('object', choice($.expression, $.primary_expression, $.import)),
          choice('.', field('optional_chain', $.optional_chain)),
          field(
            'property',
            choice($.private_property_identifier, reserved('properties', alias($.identifier, $.property_identifier)))
          )
        )
      ),

    subscript_expression: ($) =>
      prec.right(
        'member',
        seq(
          field('object', choice($.expression, $.primary_expression)),
          optional(field('optional_chain', $.optional_chain)),
          '[',
          field('index', $._expressions),
          ']'
        )
      ),

    _lhs_expression: ($) =>
      choice(
        $.member_expression,
        $.subscript_expression,
        $._identifier,
        alias($._reserved_identifier, $.identifier),
        $._destructuring_pattern
      ),

    assignment_expression: ($) =>
      prec.right(
        'assign',
        seq(field('left', choice($.parenthesized_expression, $._lhs_expression)), '=', field('right', $.expression))
      ),

    _augmented_assignment_lhs: ($) =>
      choice(
        $.member_expression,
        $.subscript_expression,
        alias($._reserved_identifier, $.identifier),
        $.identifier,
        $.parenthesized_expression
      ),

    augmented_assignment_expression: ($) =>
      prec.right(
        'assign',
        seq(
          field('left', $._augmented_assignment_lhs),
          field(
            'operator',
            choice('+=', '-=', '*=', '/=', '%=', '^=', '&=', '|=', '>>=', '>>>=', '<<=', '**=', '&&=', '||=', '??=')
          ),
          field('right', $.expression)
        )
      ),

    _initializer: ($) => seq('=', field('value', $.expression)),

    _destructuring_pattern: ($) => choice($.object_pattern, $.array_pattern),

    spread_element: ($) => seq('...', $.expression),

    ternary_expression: ($) =>
      prec.right(
        'ternary',
        seq(
          field('condition', $.expression),
          alias($._ternary_qmark, '?'),
          field('consequence', $.expression),
          ':',
          field('alternative', $.expression)
        )
      ),

    binary_expression: ($) =>
      choice(
        ...[
          ['&&', 'logical_and'],
          ['||', 'logical_or'],
          ['>>', 'binary_shift'],
          ['>>>', 'binary_shift'],
          ['<<', 'binary_shift'],
          ['&', 'bitwise_and'],
          ['^', 'bitwise_xor'],
          ['|', 'bitwise_or'],
          ['+', 'binary_plus'],
          ['-', 'binary_plus'],
          ['*', 'binary_times'],
          ['/', 'binary_times'],
          ['%', 'binary_times'],
          ['**', 'binary_exp', 'right'],
          ['<', 'binary_relation'],
          ['<=', 'binary_relation'],
          ['==', 'binary_equality'],
          ['===', 'binary_equality'],
          ['!=', 'binary_equality'],
          ['!==', 'binary_equality'],
          ['>=', 'binary_relation'],
          ['>', 'binary_relation'],
          ['??', 'ternary'],
          ['instanceof', 'binary_relation'],
          ['in', 'binary_relation'],
        ].map(([operator, precedence, associativity]) =>
          // oxlint-disable-next-line typescript/unbound-method -- prec.left and prec.right do not use `this`.
          (associativity === 'right' ? prec.right : prec.left)(
            precedence,
            seq(
              field('left', operator === 'in' ? choice($.expression, $.private_property_identifier) : $.expression),
              field('operator', operator),
              field('right', $.expression)
            )
          )
        )
      ),

    unary_expression: ($) =>
      prec.left(
        'unary_void',
        seq(field('operator', choice('!', '~', '-', '+', 'typeof', 'void', 'delete')), field('argument', $.expression))
      ),

    update_expression: ($) =>
      prec.left(
        choice(
          seq(field('argument', $.expression), field('operator', choice('++', '--')), $._postfix_update_end),
          seq(field('operator', choice('++', '--')), field('argument', $.expression))
        )
      ),

    sequence_expression: ($) => prec.right(commaSep1($.expression)),

    //
    // Primitives
    //

    string: ($) =>
      choice(
        seq('"', repeat(choice(alias($.unescaped_double_string_fragment, $.string_fragment), $.escape_sequence)), '"'),
        seq("'", repeat(choice(alias($.unescaped_single_string_fragment, $.string_fragment), $.escape_sequence)), "'")
      ),

    // Workaround to https://github.com/tree-sitter/tree-sitter/issues/1156
    // We give names to the token() constructs containing a regexp
    // so as to obtain a node in the CST.
    //
    escape_sequence: () =>
      token.immediate(
        seq('\\', choice(/[^xu0-7]/, /[0-7]{1,3}/, /x[0-9a-fA-F]{2}/, /u[0-9a-fA-F]{4}/, /u\{[0-9a-fA-F]+\}/, /\r\n/))
      ),

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    this: () => 'this',
    super: () => 'super',
