test/corpus/expressions.txt
============================================
Strings
============================================

"A string with \"double\" and 'single' quotes";
'A string with "double" and \'single\' quotes';
'\\'
"\\"

'A string with new \
line';

----

(program
  (expression_statement
    (string
      (string_fragment)
      (escape_sequence)
      (string_fragment)
      (escape_sequence)
      (string_fragment)))
  (expression_statement
    (string
      (string_fragment)
      (escape_sequence)
      (string_fragment)
      (escape_sequence)
      (string_fragment)))
  (expression_statement
    (string
      (escape_sequence)))
  (expression_statement
    (string
      (escape_sequence)))
  (expression_statement
    (string
      (string_fragment)
      (escape_sequence)
      (string_fragment))))

============================================
Template strings
============================================

`one line`;
`multi
  line`;

`multi
  ${2 + 2}
  hello
  ${1 + 1, 2 + 2}
  line`;

`$$$$`;
`$$$$${ 1 }`;

`(a|b)$`;

`$`;

`$${'$'}$$${'$'}$$$$`;

`\ `;

`The command \`git ${args.join(' ')}\` exited with an unexpected code: ${exitCode}. The caller should either handle this error, or expect that exit code.`;

`\\`;

`//`;

----

(program
  (expression_statement
    (template_string
      (string_fragment)))
  (expression_statement
    (template_string
      (string_fragment)))
  (expression_statement
    (template_string
      (string_fragment)
      (template_substitution
        (binary_expression
          (number)
          (number)))
      (string_fragment)
      (template_substitution
        (sequence_expression
          (binary_expression
            (number)
            (number))
          (binary_expression
            (number)
            (number))))
      (string_fragment)))
  (expression_statement
    (template_string
      (string_fragment)))
  (expression_statement
    (template_string
      (string_fragment)
      (template_substitution
        (number))))
  (expression_statement
    (template_string
      (string_fragment)))
  (expression_statement
    (template_string
      (string_fragment)))
  (expression_statement
    (template_string
      (string_fragment)
      (template_substitution
        (string
          (string_fragment)))
      (string_fragment)
      (template_substitution
        (string
          (string_fragment)))
      (string_fragment)))
  (expression_statement
    (template_string
      (escape_sequence)))
  (expression_statement
    (template_string
      (string_fragment)
      (escape_sequence)
      (string_fragment)
      (template_substitution
        (call_expression
          (member_expression
            (identifier)
            (property_identifier))
          (arguments
            (string
              (string_fragment)))))
      (escape_sequence)
      (string_fragment)
      (template_substitution
        (identifier))
      (string_fragment)))
  (expression_statement
    (template_string
      (escape_sequence)))
  (expression_statement
    (template_string
      (string_fragment))))

============================================
Template strings with escapes invalid outside tagged templates
============================================

String.raw`C:\update\xfiles`;
tag`\u{zz} \x4 \u004 \u0041 \x41 \u{41}`;

----

(program
  (expression_statement
    (call_expression
      (member_expression
        (identifier)
        (property_identifier))
      (template_string
        (string_fragment)
        (escape_sequence)
        (string_fragment)
        (escape_sequence)
        (string_fragment))))
  (expression_statement
    (call_expression
      (identifier)
      (template_string
        (escape_sequence)
        (string_fragment)
        (escape_sequence)
        (string_fragment)
        (escape_sequence)
        (string_fragment)
        (escape_sequence)
        (string_fragment)
        (escape_sequence)
        (string_fragment)
        (escape_sequence)))))

============================================
Complex function calls with template strings
============================================
new f()`hello`;
new f`hello`;
arr[0]`hello`;
f`hello``goodbye`;

---

(program
  (expression_statement
    (call_expression
      (new_expression
        (identifier)
        (arguments))
      (template_string
        (string_fragment))))
  (expression_statement
    (new_expression
      (call_expression
        (identifier)
        (template_string
          (string_fragment)))))
  (expression_statement
    (call_expression
      (subscript_expression
        (identifier)
        (number))
      (template_string
        (string_fragment))))
  (expression_statement
    (call_expression
      (call_expression
        (identifier)
        (template_string
          (string_fragment)))
      (template_string
        (string_fragment)))))

============================================
Function calls with template strings
============================================

f `hello`;
f
`hello`;

---

(program
  (expression_statement
    (call_expression
      (identifier)
      (template_string
        (string_fragment))))
  (expression_statement
    (call_expression
      (identifier)
      (template_string
        (string_fragment)))))

============================================
Numbers
============================================

101;
3.14;
3.14e+1;
0x1ABCDEFabcdef;
0o7632157312;
0b1010101001;
1e+3;

---

(program
  (expression_statement
    (number))
  (expression_statement
    (number))
  (expression_statement
    (number))
  (expression_statement
    (number))
  (expression_statement
    (number))
  (expression_statement
    (number))
  (expression_statement
    (number)))

============================================
Variables
============================================

theVar;
theVar2;
$_;
\u0061\u{62}cd;

---

(program
  (expression_statement
    (identifier))
  (expression_statement
    (identifier))
  (expression_statement
    (identifier))
  (expression_statement
    (identifier)))

============================================
Multi-line variable declarations
============================================

var a = b
  , c = d
  , e = f;

---

(program
  (variable_declaration
    (variable_declarator
      (identifier)
      (identifier))
    (variable_declarator
      (identifier)
      (identifier))
    (variable_declarator
      (identifier)
      (identifier))))

============================================
Booleans
============================================

this;
null;
undefined;
true;
false;

---

(program
  (expression_statement
    (this))
  (expression_statement
    (null))
  (expression_statement
    (undefined))
  (expression_statement
    (true))
  (expression_statement
    (false)))

============================================
Regexps
============================================

/one\\/;
/one/g;
/one/i;
/one/gim;
/on\/e/gim;
/on[^/]afe/gim;
/[\]/]/;
/<!--/;
/a///comment;

---

(program
  (expression_statement
    (regex
      (regex_pattern)))
  (expression_statement
    (regex
      (regex_pattern)
      (regex_flags)))
  (expression_statement
    (regex
      (regex_pattern)
      (regex_flags)))
  (expression_statement
    (regex
      (regex_pattern)
      (regex_flags)))
  (expression_statement
    (regex
      (regex_pattern)
      (regex_flags)))
  (expression_statement
    (regex
      (regex_pattern)
      (regex_flags)))
  (expression_statement
    (regex
      (regex_pattern)))
  (expression_statement
    (regex
      (regex_pattern)))
  (expression_statement
    (regex
      (regex_pattern))
    (comment)))

============================================
Comments take precedence over regexes
============================================

  foo
    ? /* comment */bar
    : baz

---

(program
  (expression_statement
    (ternary_expression
      (identifier)
      (comment)
      (identifier)
      (identifier))))

============================================
Objects
============================================

x = {};
x = { a: "b" };
x = { c: "d", "e": f, 1: 2 };
x = {
  g: h
}

x = {
  [methodName]() {
  }
}

---

(program
  (expression_statement
    (assignment_expression
      (identifier)
      (object)))
  (expression_statement
    (assignment_expression
      (identifier)
      (object
        (pair
          (property_identifier)
          (string
            (string_fragment))))))
  (expression_statement
    (assignment_expression
      (identifier)
      (object
        (pair
          (property_identifier)
          (string
            (string_fragment)))
        (pair
          (string
            (string_fragment))
          (identifier))
        (pair
          (number)
          (number)))))
  (expression_statement
    (assignment_expression
      (identifier)
      (object
        (pair
          (property_identifier)
          (identifier)))))
  (expression_statement
    (assignment_expression
      (identifier)
      (object
        (method_definition
          (computed_property_name
            (identifier))
          (formal_parameters)
          (statement_block))))))

============================================
Objects with shorthand properties
============================================

x = {a, b, get};
y = {a,};

---

(program
  (expression_statement
    (assignment_expression
      (identifier)
      (object
        (shorthand_property_identifier)
        (shorthand_property_identifier)
        (shorthand_property_identifier))))
  (expression_statement
    (assignment_expression
      (identifier)
      (object
        (shorthand_property_identifier)))))

============================================
Objects with method definitions
============================================

x = {
  foo: true,

  add(a, b) {
    return a + b;
  },

  get bar() { return c; },

  set bar(a) { c = a; },

  *barGenerator() { yield c; },

  get() { return 1; }
};

---

(program
  (expression_statement
    (assignment_expression
      (identifier)
      (object
        (pair
          (property_identifier)
          (true))
        (method_definition
          (property_identifier)
          (formal_parameters
            (identifier)
            (identifier))
          (statement_block
            (return_statement
              (binary_expression
                (identifier)
                (identifier)))))
        (method_definition
          (property_identifier)
          (formal_parameters)
          (statement_block
            (return_statement
              (identifier))))
        (method_definition
          (property_identifier)
          (formal_parameters
            (identifier))
          (statement_block
            (expression_statement
              (assignment_expression
                (identifier)
                (identifier)))))
        (method_definition
          (property_identifier)
          (formal_parameters)
          (statement_block
            (expression_statement
              (yield_expression
                (identifier)))))
        (method_definition
          (property_identifier)
          (formal_parameters)
          (statement_block
            (return_statement
              (number))))))))

============================================
Objects with reserved words for keys
============================================

{
  finally() {},
  catch() {},
  get: function () {},
  set: function () {},
  static: true,
  async: true,
  await: true,
};

---

(program
  (expression_statement
    (object
      (method_definition
        (property_identifier)
        (formal_parameters)
        (statement_block))
      (method_definition
        (property_identifier)
        (formal_parameters)
        (statement_block))
      (pair
        (property_identifier)
        (function_expression
          (formal_parameters)
          (statement_block)))
      (pair
        (property_identifier)
        (function_expression
          (formal_parameters)
          (statement_block)))
      (pair
        (property_identifier)
        (true))
      (pair
        (property_identifier)
        (true))
      (pair
        (property_identifier)
        (true)))))

============================================
Classes
============================================

class Foo {
  #e

  static one(a) { return a; };
  two(b) { return b; }
  three(c) { return c; }
  #four(d) { return this.#e; }
}

class Foo extends require('another-class') {
  constructor() {
    super()
  }

  static
  {
    this.#foo = 'bar';
  }

  bar() {
    super.a()
    this.#baz()
  }

  #baz() {
    super.a()
  }
}

class A{;}

---

(program
  (class_declaration
    (identifier)
    (class_body
      (field_definition
        (private_property_identifier))
      (method_definition
        (property_identifier)
        (formal_parameters
          (identifier))
        (statement_block
          (return_statement
            (identifier))))
      (method_definition
        (property_identifier)
        (formal_parameters
          (identifier))
        (statement_block
          (return_statement
            (identifier))))
      (method_definition
        (property_identifier)
        (formal_parameters
          (identifier))
        (statement_block
          (return_statement
            (identifier))))
      (method_definition
        (private_property_identifier)
        (formal_parameters
          (identifier))
        (statement_block
          (return_statement
            (member_expression
              (this)
              (private_property_identifier)))))))
  (class_declaration
    (identifier)
    (class_heritage
      (call_expression
        (identifier)
        (arguments
          (string
            (string_fragment)))))
    (class_body
      (method_definition
        (property_identifier)
        (formal_parameters)
        (statement_block
          (expression_statement
            (call_expression
              (super)
              (arguments)))))
      (class_static_block
        (statement_block
          (expression_statement
            (assignment_expression
              (member_expression
                (this)
                (private_property_identifier))
              (string
                (string_fragment))))))
      (method_definition
        (property_identifier)
        (formal_parameters)
        (statement_block
          (expression_statement
            (call_expression
              (member_expression
                (super)
                (property_identifier))
              (arguments)))
          (expression_statement
            (call_expression
              (member_expression
                (this)
                (private_property_identifier))
              (arguments)))))
      (method_definition
        (private_property_identifier)
        (formal_parameters)
        (statement_block
          (expression_statement
            (call_expression
              (member_expression
                (super)
                (property_identifier))
              (arguments)))))))
  (class_declaration
    (identifier)
    (class_body)))

============================================
Classes with reserved words as methods
============================================

class Foo {
  catch() {}
  finally() {}
  await() {}
}

---

(program
  (class_declaration
    (identifier)
    (class_body
      (method_definition
        (property_identifier)
        (formal_parameters)
        (statement_block))
      (method_definition
        (property_identifier)
        (formal_parameters)
        (statement_block))
      (method_definition
        (property_identifier)
        (formal_parameters)
        (statement_block)))))

============================================
Class Property Fields
============================================

class Foo {
	static foo = 2
}

class Bar {
  static get
  baz() { return 1; }
}

---

(program
  (class_declaration
    (identifier)
    (class_body
      (field_definition
        (property_identifier)
        (number))))
  (class_declaration
    (identifier)
    (class_body
      (method_definition
        (property_identifier)
        (formal_parameters)
        (statement_block
          (return_statement
            (number)))))))

============================================
Await Class Property Fields
============================================

class Foo {
  await = 1;
  await;
  static await = 2;
  other = 3;
  await() {}
  get await() { return 4; }
}

const Bar = class {
  await /* field */ = 5;
};

export default class extends Foo {
  static await;
}

---

(program
  (class_declaration
    (identifier)
    (class_body
      (field_definition
        (property_identifier)
        (number))
      (field_definition
        (property_identifier))
      (field_definition
        (property_identifier)
        (number))
      (field_definition
        (property_identifier)
        (number))
      (method_definition
        (property_identifier)
        (formal_parameters)
        (statement_block))
      (method_definition
        (property_identifier)
        (formal_parameters)
        (statement_block
          (return_statement
            (number))))))
  (lexical_declaration
    (variable_declarator
      (identifier)
      (class
        (class_body
          (field_definition
            (property_identifier)
            (comment)
            (number))))))
  (export_statement
    (class
      (class_heritage
        (identifier))
      (class_body
        (field_definition
          (property_identifier))))))

============================================
Private Class Property Fields
============================================

class Foo {
	static #FOO = 2
}

class Bar {
  #BAZ; static foo(quux) { return #BAZ in quux; }
}

---

(program
  (class_declaration
    (identifier)
    (class_body
      (field_definition
        (private_property_identifier)
        (number))))
  (class_declaration
    (identifier)
    (class_body
      (field_definition
        (private_property_identifier))
      (method_definition
        (property_identifier)
        (formal_parameters
          (identifier))
        (statement_block
          (return_statement
            (binary_expression
              (private_property_identifier)
              (identifier))))))))

============================================
Class Decorators
============================================

@reload
@eval
class Foo {
	@foo.bar(baz) static foo() {

	}

	@foo bar = 'baz';
}

---

(program
  (class_declaration
    (decorator
      (identifier))
    (decorator
      (identifier))
    (identifier)
    (class_body
      (method_definition
        (decorator
          (call_expression
            (member_expression
              (identifier)
              (property_identifier))
            (arguments
              (identifier))))
        (property_identifier)
        (formal_parameters)
        (statement_block))
      (field_definition
        (decorator
          (identifier))
        (property_identifier)
        (string
          (string_fragment))))))

============================================
Decorators with reserved, private, and parenthesized names
============================================

@a.default
class A {
  @b.if m() {}
  @(c.d)
  n() {}
  @e.#f o = 1
  @g.class(h) p() {}
  @(i.j)(k) q() {}
}

---

(program
  (class_declaration
    (decorator (member_expression (identifier) (property_identifier)))
    (identifier)
    (class_body
      (method_definition
        (decorator (member_expression (identifier) (property_identifier)))
        (property_identifier)
        (formal_parameters)
        (statement_block))
      (method_definition
        (decorator (parenthesized_expression (member_expression (identifier) (property_identifier))))
        (property_identifier)
        (formal_parameters)
        (statement_block))
      (field_definition
        (decorator (member_expression (identifier) (private_property_identifier)))
        (property_identifier)
        (number))
      (method_definition
        (decorator
          (call_expression
            (member_expression (identifier) (property_identifier))
            (arguments (identifier))))
        (property_identifier)
        (formal_parameters)
        (statement_block))
      (method_definition
        (decorator
          (call_expression
            (parenthesized_expression (member_expression (identifier) (property_identifier)))
            (arguments (identifier))))
        (property_identifier)
        (formal_parameters)
        (statement_block)))))

============================================
Arrays
============================================

[];
[ "item1" ];
[ "item1", ];
[ "item1", item2 ];
[ , item2 ];
[ item2 = 5 ];

---

(program
  (expression_statement
    (array))
  (expression_statement
    (array
      (string
        (string_fragment))))
  (expression_statement
    (array
      (string
        (string_fragment))))
  (expression_statement
    (array
      (string
        (string_fragment))
      (identifier)))
  (expression_statement
    (array
      (identifier)))
  (expression_statement
    (array
      (assignment_expression
        (identifier)
        (number)))))

============================================
Functions
============================================

[
  function() {},
  function(arg1, ...arg2) {
    arg2;
  },
  function stuff() {},
  function trailing(a,) {},
  function trailing(a,b,) {},
  function reserved(async) {},
  function rest(...[_ = x]) {}
]

---

(program
  (expression_statement
    (array
      (function_expression
        (formal_parameters)
        (statement_block))
      (function_expression
        (formal_parameters
          (identifier)
          (rest_pattern
            (identifier)))
        (statement_block
          (expression_statement
            (identifier))))
      (function_expression
        (identifier)
        (formal_parameters)
        (statement_block))
      (function_expression
        (identifier)
        (formal_parameters
          (identifier))
        (statement_block))
      (function_expression
        (identifier)
        (formal_parameters
          (identifier)
          (identifier))
        (statement_block))
      (function_expression
        (identifier)
        (formal_parameters
          (identifier))
        (statement_block))
      (function_expression
        (identifier)
        (formal_parameters
          (rest_pattern
            (array_pattern
              (assignment_pattern
                (identifier)
                (identifier)))))
        (statement_block)))))

===================================================
Arrow functions
===================================================

a => 1;
() => 2;
(d, e) => 3;
(f, g) => {
  return h;
};
(trailing,) => 4;
(h, trailing,) => 5;
(set, kv) => 2;
async => async + 1;

---

(program
  (expression_statement
    (arrow_function
      (identifier)
      (number)))
  (expression_statement
    (arrow_function
      (formal_parameters)
      (number)))
  (expression_statement
    (arrow_function
      (formal_parameters
        (identifier)
        (identifier))
      (number)))
  (expression_statement
    (arrow_function
      (formal_parameters
        (identifier)
        (identifier))
      (statement_block
        (return_statement
          (identifier)))))
  (expression_statement
    (arrow_function
      (formal_parameters
        (identifier))
      (number)))
  (expression_statement
    (arrow_function
      (formal_parameters
        (identifier)
        (identifier))
      (number)))
  (expression_statement
    (arrow_function
      (formal_parameters
        (identifier)
        (identifier))
      (number)))
  (expression_statement
    (arrow_function
      (identifier)
      (binary_expression
        (identifier)
        (number)))))

============================================
Generator Functions
============================================

[
  function *() {},
  function *generateStuff(arg1, arg2) {
    yield;
    yield arg2;
    yield * foo();
  }
]

---

(program
  (expression_statement
    (array
      (generator_function
        (formal_parameters)
        (statement_block))
      (generator_function
        (identifier)
        (formal_parameters
          (identifier)
          (identifier))
        (statement_block
          (expression_statement
            (yield_expression))
          (expression_statement
            (yield_expression
              (identifier)))
          (expression_statement
            (yield_expression
              (call_expression
                (identifier)
                (arguments)))))))))

============================================
Function parameters with default values
============================================

function a({b}, c = d, e = f, async = true) {
}

---

(program
  (function_declaration
    (identifier)
    (formal_parameters
      (object_pattern
        (shorthand_property_identifier_pattern))
      (assignment_pattern
        (identifier)
        (identifier))
      (assignment_pattern
        (identifier)
        (identifier))
      (assignment_pattern
        (identifier)
        (true)))
    (statement_block)))

============================================
Property access
============================================

x.someProperty;
x[someVariable];
x["some-string"];

---

(program
  (expression_statement
    (member_expression
      (identifier)
      (property_identifier)))
  (expression_statement
    (subscript_expression
      (identifier)
      (identifier)))
  (expression_statement
    (subscript_expression
      (identifier)
      (string
        (string_fragment)))))

============================================
Chained Property access
============================================

return returned.promise()
  .done( newDefer.resolve )
  .fail( newDefer.reject )

---

(program
  (return_statement
    (call_expression
      (member_expression
        (call_expression
          (member_expression
            (call_expression
              (member_expression
                (identifier)
                (property_identifier))
              (arguments))
            (property_identifier))
          (arguments
            (member_expression
              (identifier)
              (property_identifier))))
        (property_identifier))
      (arguments
        (member_expression
          (identifier)
          (property_identifier))))))

============================================
Chained callbacks
============================================

return this.map(function (a) {
  return a.b;
})

// a comment

.filter(function (c) {
  return c.d;
})

---

(program
  (return_statement
    (call_expression
      (member_expression
        (call_expression
          (member_expression
            (this)
            (property_identifier))
          (arguments
            (function_expression
              (formal_parameters
                (identifier))
              (statement_block
                (return_statement
                  (member_expression
                    (identifier)
                    (property_identifier)))))))
        (comment)
        (property_identifier))
      (arguments
        (function_expression
          (formal_parameters
            (identifier))
          (statement_block
            (return_statement
              (member_expression
                (identifier)
                (property_identifier)))))))))
